fixed creativetab title issue

--- a/src/main/resources/assets/simplyjuices/lang/en_US.lang
+++ b/src/main/resources/assets/simplyjuices/lang/en_US.lang
@@ -1,4 +1,4 @@
-﻿itemGroup.simplyjuices=Simply Juices
+itemGroup.simplyjuices=Simply Juices
 
 item.itemtooljuicer.name=Juicer
 item.itemtoolbottle.name=Juice bottle
